--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,16 @@
+:root {
+	--filter: invert(1) hue-rotate(180deg);
+}
+
+html {
+	transition: color 300ms, background-color 300ms, filter 300ms;
+}
+
+html[data-dark-theme="true"] {
+	background: #eee;
+	filter: invert(1) hue-rotate(180deg);
+}					
+
 html, body {
 	position: relative;
 	width: 100%;
